eks-manifest-files/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      imagePullSecrets:
      - name: regcred # 
      containers:
      - name: nodejs-app
        image: rahulunixsa87/devsecops-project-1-app:abc
        ports:
        - containerPort: 5000
