eks-manifest-files/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  type: ClusterIP
  selector:
    app: nodejs-app
  ports:
    - port: 5000
      targetPort: 5000
